# kiwi

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.cmake  dependency.cmake  pkg.json  pkg.yaml
docs/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  base_app.cpp  base_app.h  kiwi-config.cmake.in  kiwi_app.cpp  kiwi_app.h  library.cpp  library.h  platform_check.cmake
src/config/: config.cpp  config.h
src/event/: message_looper.cpp  message_looper.h  message_runner.h
src/io/: io_utils.hpp  io_writer.cpp  io_writer.h  local_storage.cpp  local_storage.h
src/logs/: colors.h  logs.cpp  logs.h  logs.hpp
src/platform/: mpi_support.h.in
src/utils/: bundle.cpp  bundle.h  data_def.h  io_writer.cpp  io_writer.h  mpi_utils.cpp  mpi_utils.h
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  gtest_env.h  test_config.h.in
test/unit/event/: message_loop_test.cpp
test/unit/io/: io_utils_test.cpp  io_writer_test.cpp  local_storage_test.cpp
test/unit/logs/: logs_test.cpp
test/unit/utils/: bundle_test.cpp  mpi_utils_test.cpp
test/utils/: CMakeLists.txt  gtest_env.h
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  gtest_env.h  test_config.h.in
tests/unit/config/: config.cpp
tests/unit/event/: message_loop_test.cpp
tests/unit/io/: io_utils_test.cpp  io_writer_test.cpp  local_storage_test.cpp
tests/unit/logs/: logs_test.cpp
tests/unit/utils/: bundle_test.cpp  mpi_utils_test.cpp
tests/utils/: gtest_env.h
