#
#if (UMBRELLA_BUILD_DOCS)
#    add_subdirectory(${PROJECT_SOURCE_DIR}/docs ${PROJECT_BINARY_DIR}/docs)
#    MESSAGE(STATUS "docsname:" ${DOCS})
#endif ()
#
#
#project(umbrella_docs)
#MESSAGE(STATUS "in docs: ${UMBRELLA_LIB_NAME}")
#MESSAGE(STATUS "in docs: ${PROJECT_SOURCE_DIR}")
#MESSAGE(STATUS "in docs: ${PROJECT_NAME}")
#MESSAGE(STATUS "in docs: ${PROJECT_BINARY_DIR}")
#
#set(DOCS "name of docs")
